Paired down the menu, rearrange page sections, enabled google maps, added honeyfund link

--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#slider">Home</a>
 							</li>
-							<li class="nav-item">
+							<!-- Commenting out to remove temporarily <li class="nav-item">
 								<a class="nav-link" href="#about">About Us</a>
-							</li>
-							<li class="nav-item">
+							</li> -->
+							<!-- Commenting out to remove temporarily <li class="nav-item">
 								<a class="nav-link" href="#story">Story</a>
-							</li>
-							<li class="nav-item">
+							</li> -->
+							<!-- Commenting out to remove temporarily <li class="nav-item">
 								<a class="nav-link" href="#blog">Blog</a>
-							</li>
-							<li class="nav-item">
+							</li> -->
+							<!-- Commenting out to remove temporarily <li class="nav-item">
 								<a class="nav-link" href="#people">People</a>
-							</li>
+							</li> -->
 							<li class="nav-item">
 								<a class="nav-link" href="#portfolio">Portfolio</a>
 							</li>
@@ -146,7 +146,7 @@
 		</header>
 		<!-- Sticky Menu End -->
 
-		<!-- About Section -->
+		<!-- About Section
 		<section id="about">
 			<div class="container">
 				<div class="row">
@@ -218,9 +218,9 @@
 				</div>
 			</div>
 		</section>
-		<!-- About Section End -->
+		About Section End -->
 
-		<!-- Comment Section -->
+		<!-- Comment Section
 		<section id="comment">
 			<div class="container relative-z">
 				<div class="row">
@@ -241,9 +241,9 @@
 			</div>
 			<div class="img-overlay"></div>
 		</section>
-		<!-- Comment Section End -->
+		Comment Section End -->
 
-		<!-- Story Section -->
+		<!-- Story Section
 		<section id="story">
 			<div class="container">
 				<div class="row">
@@ -326,9 +326,9 @@
 				</div>
 			</div>
 		</section>
-		<!-- Story Section  End -->
+		Story Section  End -->
 
-		<!-- Blog Section -->
+		<!-- Blog Section
 		<section id="blog">
 			<div class="container relative-z">
 				<div class="card-deck">
@@ -360,7 +360,98 @@
 			</div>
 			<div class="img-overlay"></div>
 		</section>
-		<!-- Blog Section End -->
+		Blog Section End -->
+
+		<!-- Event Section -->
+		<section id="event">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<div class="big-head-wrap">
+						</div>
+						<h2 class="big-heading mt-0 mt-0">
+							<span class="custom-color">Wedding</span> Event
+						</h2>
+						<img class="headline_1" src="img/headline_simple.svg" alt="">
+						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-2 main-order-sm-2">
+						<h4 class="font-weight-light mt-0">Aliquam vestibulum eros</h4>
+						<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</p>
+						<p class="margin-b-2">Donec venenatis porta mollis. Fusce quis tincidunt orci. Integer fermentum ante augue, sed accumsan purus ornare vitae. Ut accumsan ornare elit at maximus. Aliquam tincidunt ipsum ut nunc sollicitudin dapibus.</p>
+						<button class="button-medium btn btn-default transparent-btn">Read More
+							<i class="fa fa-angle-right"></i>
+						</button>
+					</div>
+					<div class="col-md-6 pl-70 order-2 main-order-xs-1 main-order-sm-1 margin-sm-b-2">
+						<div class="panel-group line" id="accordion" role="tablist" aria-multiselectable="true">
+							<div class="panel panel-default active">
+								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
+									<div class="panel-heading" id="headingOne">
+										<div class="panel-number">1</div>
+										<h5 class="panel-title">Our Ceremony</h5>
+									</div>
+								</a>
+								<div id="collapse_1" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingOne">
+									<div class="panel-body">
+										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
+										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.581087237902!2d-74.24110538432045!3d40.81519843923193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU0LjciTiA3NMKwMTQnMjAuMSJX!5e0!3m2!1sen!2sus!4v1512389015359">
+											<span class="custom-color">
+												<i class="fa fa-map-marker"></i>
+											</span>Show Map
+										</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="panel panel-default">
+								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_2" aria-expanded="true" aria-controls="collapse_2">
+									<div class="panel-heading" id="headingTwo">
+										<div class="panel-number">2</div>
+										<h5 class="panel-title">Wedding Party</h5>
+									</div>
+								</a>
+								<div id="collapse_2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+									<div class="panel-body">
+										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
+										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.5673598035964!2d-74.22810068432045!3d40.81550003921357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU1LjgiTiA3NMKwMTMnMzMuMyJX!5e0!3m2!1sen!2sus!4v1512389177460">
+											<span class="custom-color">
+												<i class="fa fa-map-marker"></i>
+											</span>Show Map
+										</a>
+									</div>
+								</div>
+							</div>
+
+							<div class="panel panel-default">
+								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_3" aria-expanded="true" aria-controls="collapse_3">
+									<div class="panel-heading" id="headingThree">
+										<div class="panel-number">3</div>
+										<h5 class="panel-title">Reception</h5>
+									</div>
+								</a>
+								<div id="collapse_3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+									<div class="panel-body">
+										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
+										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.6815553090073!2d-74.24765468432048!3d40.81299103936746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzQ2LjgiTiA3NMKwMTQnNDMuNyJX!5e0!3m2!1sen!2sus!4v1512389284031">
+											<span class="custom-color">
+												<i class="fa fa-map-marker"></i>
+											</span>Show Map
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Event Section End -->
+
+		<!-- Google Map Full Width Section -->
+		<div id="map"></div>
 
 		<!-- People Section -->
 		<section id="people">
@@ -413,7 +504,7 @@
 		</section>
 		<!-- People Section End -->
 
-		<!-- Countup Section -->
+		<!-- Countup Section
 		<section id="countup" >
 			<div class="container">
 				<div class="row text-center">
@@ -436,7 +527,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- Countup Section End -->
+		Countup Section End -->
 
 		<!-- Portfolio Section -->
 		<section id="portfolio">
@@ -569,96 +660,6 @@
 		</section>
 		<!-- Portfolio Section End -->
 
-		<!-- Event Section -->
-		<section id="event">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 text-center">
-						<div class="big-head-wrap">
-						</div>
-						<h2 class="big-heading mt-0 mt-0">
-							<span class="custom-color">Wedding</span> Event
-						</h2>
-						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-2 main-order-sm-2">
-						<h4 class="font-weight-light mt-0">Aliquam vestibulum eros</h4>
-						<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</p>
-						<p class="margin-b-2">Donec venenatis porta mollis. Fusce quis tincidunt orci. Integer fermentum ante augue, sed accumsan purus ornare vitae. Ut accumsan ornare elit at maximus. Aliquam tincidunt ipsum ut nunc sollicitudin dapibus.</p>
-						<button class="button-medium btn btn-default transparent-btn">Read More
-							<i class="fa fa-angle-right"></i>
-						</button>
-					</div>
-					<div class="col-md-6 pl-70 order-2 main-order-xs-1 main-order-sm-1 margin-sm-b-2">
-						<div class="panel-group line" id="accordion" role="tablist" aria-multiselectable="true">
-							<div class="panel panel-default active">
-								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
-									<div class="panel-heading" id="headingOne">
-										<div class="panel-number">1</div>
-										<h5 class="panel-title">Our Ceremony</h5>
-									</div>
-								</a>
-								<div id="collapse_1" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingOne">
-									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.581087237902!2d-74.24110538432045!3d40.81519843923193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU0LjciTiA3NMKwMTQnMjAuMSJX!5e0!3m2!1sen!2sus!4v1512389015359">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
-										</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="panel panel-default">
-								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_2" aria-expanded="true" aria-controls="collapse_2">
-									<div class="panel-heading" id="headingTwo">
-										<div class="panel-number">2</div>
-										<h5 class="panel-title">Wedding Party</h5>
-									</div>
-								</a>
-								<div id="collapse_2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.5673598035964!2d-74.22810068432045!3d40.81550003921357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU1LjgiTiA3NMKwMTMnMzMuMyJX!5e0!3m2!1sen!2sus!4v1512389177460">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
-										</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="panel panel-default">
-								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_3" aria-expanded="true" aria-controls="collapse_3">
-									<div class="panel-heading" id="headingThree">
-										<div class="panel-number">3</div>
-										<h5 class="panel-title">Reception</h5>
-									</div>
-								</a>
-								<div id="collapse_3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.6815553090073!2d-74.24765468432048!3d40.81299103936746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzQ2LjgiTiA3NMKwMTQnNDMuNyJX!5e0!3m2!1sen!2sus!4v1512389284031">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- Event Section End -->
-
-		<!-- Google Map Full Width Section -->
-		<div id="map"></div>
 
 		<!-- Gift Section -->
 		<section id="gift">
@@ -668,55 +669,19 @@
 						<div class="big-head-wrap">
 						</div>
 						<h2 class="big-heading mt-0 mt-0">
-							Gift <span class="custom-color">Registry</span>
+							<span class="custom-color">Honeyfund</span>
 						</h2>
 						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Instead of a registry, please help us celebrate our marriage by making a contribution to our Honeymoon Fund.</p>
 					</div>
 				</div>
 
-				<div id="gift-carousel" class="owl-carousel owl-theme">
-					<div class="item">
-						<i class="fa fa-home"></i>
-						<h4>House</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-film"></i>
-						<h4>Film</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-money"></i>
-						<h4>Money</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-bed"></i>
-						<h4>Bed</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-diamond"></i>
-						<h4>Diamond</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-motorcycle"></i>
-						<h4>Motorcycle</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-briefcase"></i>
-						<h4>Briefcase</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
-					<div class="item">
-						<i class="fa fa-music"></i>
-						<h4>Music</h4>
-						<p>Aenean et turpis efficitur, pretium lorem vitae, feugiat mi.</p>
-					</div>
+				<!-- Honeyfund html embed -->
+				<div style="width:200px;margin:0 auto;">
+					<a href="http://www.honeyfund.com/wedding/CortneyandAdam2020" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a>
 				</div>
+				<!-- Honeyfund html embed End -->
+
 			</div>
 		</section>
 		<!-- Gift Section End -->
@@ -836,11 +801,11 @@
 		<script src="js/main.js"></script>
 
 		<!-- Google Map Settings-->
-		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrBgapa385AKxkq6QLcl05RoH8Zcza_uI"></script>
 		<script>
 
 			// Add the map center coordinate
-			var center = {lat: 40.815182, lng: -74.238908};
+			var center = {lat: 38.580976, lng: -121.4903197};
 
 			var map = new google.maps.Map(document.getElementById('map'),
 				{
@@ -873,7 +838,7 @@
 
 			// Add the markers to the Map
 			addMarker({
-				coordinate:{lat: 40.815182, lng: -74.238908},
+				coordinate:{lat: 38.580976, lng: -121.4903197},
 				infowindow:'<div id="content">'+
 	            '<h4 class="font-weight-light"><span class="custom-color">First</span> Point</h4>'+
 	            '<div class="map-info-content">'+
@@ -887,20 +852,9 @@
 			});
 
 			addMarker({
-				coordinate:{lat: 40.815496, lng: -74.225912},
+				coordinate:{lat: 38.5792606, lng: -121.492094},
 				infowindow:'<div id="content">'+
 	            '<h4 class="font-weight-light"><span class="custom-color">Second</span> Point</h4>'+
-	            '<div class="map-info-content">'+
-	            '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, vitae, minima blanditiis inventore ea eum?</p>'+
-	            '</div>'+
-	            '</div>',
-				icon: "img/map_marker.png",
-			});
-
-			addMarker({
-				coordinate:{lat: 40.812987, lng: -74.245466},
-				infowindow:'<div id="content">'+
-	            '<h4 class="font-weight-light"><span class="custom-color">Third</span> Point</h4>'+
 	            '<div class="map-info-content">'+
 	            '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, vitae, minima blanditiis inventore ea eum?</p>'+
 	            '</div>'+
