Updated geolocations for google map

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
 		<script>
 
 			// Add the map center coordinate
-			var center = {lat: 38.580976, lng: -121.4903197};
+			var center = {lat: 38.580970, lng: -121.488130};
 
 			var map = new google.maps.Map(document.getElementById('map'),
 				{
@@ -812,7 +812,7 @@
 
 			// Add the markers to the Map
 			addMarker({
-				coordinate:{lat: 38.580976, lng: -121.4903197},
+				coordinate:{lat: 38.580970, lng: -121.488130},
 				infowindow:'<div id="content">'+
 	            '<h4 class="font-weight-light"><span class="custom-color">First</span> Point</h4>'+
 	            '<div class="map-info-content">'+
@@ -826,7 +826,7 @@
 			});
 
 			addMarker({
-				coordinate:{lat: 38.5792606, lng: -121.492094},
+				coordinate:{lat: 38.579010, lng: -121.489906},
 				infowindow:'<div id="content">'+
 	            '<h4 class="font-weight-light"><span class="custom-color">Second</span> Point</h4>'+
 	            '<div class="map-info-content">'+
