Updated wedding event description.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<nav id="primary-navbar" class="navbar navbar-expand-lg navbar-light bg-white">
 				<div class="container">
 					<a class="navbar-brand" href="#">
-						Arl<span class="custom-color">i</span>n
+						Cortney & Adam
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -347,17 +347,14 @@
 							<span class="custom-color">Wedding</span> Event
 						</h2>
 						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-2 main-order-sm-2">
-						<h4 class="font-weight-light mt-0">Aliquam vestibulum eros</h4>
-						<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</p>
-						<p class="margin-b-2">Donec venenatis porta mollis. Fusce quis tincidunt orci. Integer fermentum ante augue, sed accumsan purus ornare vitae. Ut accumsan ornare elit at maximus. Aliquam tincidunt ipsum ut nunc sollicitudin dapibus.</p>
-						<button class="button-medium btn btn-default transparent-btn">Read More
-							<i class="fa fa-angle-right"></i>
-						</button>
+						<h4 class="font-weight-light mt-0">The Details</h4>
+						<p class="">Come in your 1920's best! Great Gatsby style baby! We're bringing this celebration back one-hundred years. All you eggs and flappers that have been invited, join us! RSVP and everything'll be jake. We'll be dipping our bill together, but pace yourself. Don't want to get zazzled right off the bat.</p>
+						<p class="margin-b-2">Our celebration will have three parts. In each of these three parts guests are encouraged to laugh, cry, and hold hands with your personal emotional support (aka your guest). All three parts will be hosted at the same location: The Sterling Hotel.</p>
+					  <p class="">Please do not heckle the efficient, he's doin' his best.</p>
 					</div>
 					<div class="col-md-6 pl-70 order-2 main-order-xs-1 main-order-sm-1 margin-sm-b-2">
 						<div class="panel-group line" id="accordion" role="tablist" aria-multiselectable="true">
