--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#event">Event</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#directions">Directions</a>
+							</li>
 								<a class="nav-link" href="#people">People</a>
 							</li>
 							<li class="nav-item">
@@ -350,13 +353,13 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-2 main-order-sm-2">
+					<div class="col-md-6 pr-70 text-right order-1 main-order-xs-1 main-order-sm-1">
 						<h4 class="font-weight-light mt-0">The Details</h4>
 						<p class="">Come in your 1920's best! Great Gatsby style baby! We're bringing this celebration back one-hundred years. All you eggs and flappers that have been invited, join us! RSVP and everything'll be jake. We'll be dipping our bill together, but pace yourself. Don't want to get zazzled right off the bat.</p>
-						<p class="margin-b-2">Our celebration will have three parts. In each of these three parts guests are encouraged to laugh, cry, and hold hands with your personal emotional support (aka your guest). All three parts will be hosted at the same location: The Sterling Hotel.</p>
-					  <p class="">Please do not heckle the efficient, he's doin' his best.</p>
+						<p class="">Our celebration will have three parts. In each of these three parts guests are encouraged to laugh, cry, and hold hands with your personal emotional support (aka your guest). All three parts will be hosted at the same location: The Sterling Hotel.</p>
+					  <p class="margin-b-2">In the event of a raid by the coppers, drink fast.</p>
 					</div>
-					<div class="col-md-6 pl-70 order-2 main-order-xs-1 main-order-sm-1 margin-sm-b-2">
+					<div class="col-md-6 pl-70 order-2 main-order-xs-2 main-order-sm-2 margin-sm-b-2">
 						<div class="panel-group line" id="accordion" role="tablist" aria-multiselectable="true">
 							<div class="panel panel-default active">
 								<a class="panel-link" data-toggle="collapse" data-parent="#accordion" href="#collapse_1" aria-expanded="true" aria-controls="collapse_1">
@@ -367,11 +370,7 @@
 								</a>
 								<div id="collapse_1" class="panel-collapse collapse show" role="tabpanel" aria-labelledby="headingOne">
 									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.581087237902!2d-74.24110538432045!3d40.81519843923193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU0LjciTiA3NMKwMTQnMjAuMSJX!5e0!3m2!1sen!2sus!4v1512389015359">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
+										<p>It all begins at the Sterling Hotel in downtown Sacramento. There is no password for entry. Meet in the ballroom and get your tear-wipes ready.</p>
 										</a>
 									</div>
 								</div>
@@ -386,12 +385,7 @@
 								</a>
 								<div id="collapse_2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.5673598035964!2d-74.22810068432045!3d40.81550003921357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzU1LjgiTiA3NMKwMTMnMzMuMyJX!5e0!3m2!1sen!2sus!4v1512389177460">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
-										</a>
+										<p>After the ceremony, the bar opens. Migrate yourself to the bar area and ask for a gin rickey. We'll be here for an hour as the reception area is prepared for us.</p>
 									</div>
 								</div>
 							</div>
@@ -405,12 +399,7 @@
 								</a>
 								<div id="collapse_3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									<div class="panel-body">
-										<p>Nam condimentum lorem odio, in efficitur est facilisis sit amet. Donec eu diam accumsan, dictum ligula sed, eleifend ipsum.</p>
-										<a class="link popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.6815553090073!2d-74.24765468432048!3d40.81299103936746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDQ4JzQ2LjgiTiA3NMKwMTQnNDMuNyJX!5e0!3m2!1sen!2sus!4v1512389284031">
-											<span class="custom-color">
-												<i class="fa fa-map-marker"></i>
-											</span>Show Map
-										</a>
+										<p>Now that you're properly sloshed, head back into the ballroom and try your best attempt at the Charleston!</p>
 									</div>
 								</div>
 							</div>
@@ -422,7 +411,23 @@
 		<!-- Event Section End -->
 
 		<!-- Google Map Full Width Section -->
+		<section id="directions">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<div class="big-head-wrap">
+					</div>
+					<h2 class="big-heading mt-0 mt-0">
+						Directions
+					</h2>
+					<img class="headline_1" src="img/headline_simple.svg" alt="">
+					<p class="sub-heading"> 1300 H St, Sacramento, CA 95814 </p>
+					<a href="https://goo.gl/maps/n4iv1RbuSu22" class="button-link margin-b-2"> Navigate me there </a>
+				</div>
+			</div>
 		<div id="map"></div>
+		</section>
+
 
 		<!-- People Section -->
 		<section id="people">
@@ -435,7 +440,7 @@
 						Important <span class="custom-color">People</span>
 					</h2>
 					<img class="headline_1" src="img/headline_simple.svg" alt="">
-					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
 				</div>
 			</div>
 				<div class="row">
@@ -511,7 +516,7 @@
 							<span class="custom-color">Our</span> Portfolio
 						</h2>
 						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
 					</div>
 				</div>
 			</div>
@@ -643,16 +648,14 @@
 							<span class="custom-color">Honeyfund</span>
 						</h2>
 						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Instead of a registry, please help us celebrate our marriage by making a contribution to our Honeymoon Fund.</p>
+						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Instead of a registry, please help us celebrate our marriage by making a contribution to our Honeymoon Fund.</p>
+					<!-- Honeyfund html embed -->
+						<div style="width:200px;margin:0 auto;">
+							<a href="http://www.honeyfund.com/wedding/CortneyandAdam2020" class="button-link">Visit the HoneyFund</a>
+						</div>
 					</div>
+					<!-- Honeyfund html embed End -->
 				</div>
-
-				<!-- Honeyfund html embed -->
-				<div style="width:200px;margin:0 auto;">
-					<a href="http://www.honeyfund.com/wedding/CortneyandAdam2020" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a>
-				</div>
-				<!-- Honeyfund html embed End -->
-
 			</div>
 		</section>
 		<!-- Gift Section End -->
