Cleaning up commented out content

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 		<!-- Basic -->
 		<meta charset="utf-8">
-		<meta name="keywords" content="HTML5 Template" />
-		<meta name="description" content="Arlin - Responsive HTML5 Wedding Template">
-		<meta name="author" content="regediter.com">
+		<meta name="keywords" content="Cortney, Adam, Ceccato, Strautman, Wedding, Sterling, 2019, January" />
+		<meta name="description" content="Adam and Cortney Wedding Website">
+		<meta name="author" content="Adam Strautman">
 
 		<!-- Page Title -->
 		<title>Cortney and Adam</title>
@@ -37,15 +37,6 @@
 
 	</head>
 	<body>
-		<!-- Page Loader Animation -->
-<!--		<div id="loader">
-			<div class="container loader-img-holder text-center">
-				<img class="img-fluid" src="img/loader.svg" alt="">
-			</div>
-		</div>
-//-->
-		<!-- Page loader animation end -->
-		<!-- slider Section -->
 		<section id="slider">
 			<div class="holder-caption">
 				<div class="container relative-z">
@@ -90,15 +81,6 @@
 							<li class="nav-item">
 								<a class="nav-link" href="#slider">Home</a>
 							</li>
-							<!-- Commenting out to remove temporarily <li class="nav-item">
-								<a class="nav-link" href="#about">About Us</a>
-							</li> -->
-							<!-- Commenting out to remove temporarily <li class="nav-item">
-								<a class="nav-link" href="#story">Story</a>
-							</li> -->
-							<!-- Commenting out to remove temporarily <li class="nav-item">
-								<a class="nav-link" href="#blog">Blog</a>
-							</li> -->
 							<li class="nav-item">
 								<a class="nav-link" href="#event">Event</a>
 							</li>
@@ -122,222 +104,6 @@
 			</nav>
 		</header>
 		<!-- Sticky Menu End -->
-
-		<!-- About Section
-		<section id="about">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 text-center">
-						<div class="big-head-wrap">
-						</div>
-						<h2 class="big-heading mt-0 mt-0">About <span class="custom-color">Us</span></h2>
-						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-6 text-center margin-xs-b-2 margin-sm-b-2">
-						<figure>
-							<img src="img/bride_338x338.jpg" alt="bride" class="img-fluid rounded-circle">
-						</figure>
-						<div class="about-content col-sm-8 offset-sm-2">
-							<h4>Jane Doe
-								<span class="custom-color">Bride</span>
-							</h4>
-							<p>Mauris fermentum lacinia nisl. Duis nec rutrum nisl. Ut ac eros fermentum.</p>
-							<ul class="social-link">
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Linkedin">
-										<i class="fa fa-linkedin"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6 text-center">
-						<figure>
-							<img src="img/groom_338x338.jpg" alt="groom" class="img-fluid rounded-circle">
-						</figure>
-						<div class="about-content col-sm-8 offset-sm-2">
-							<h4>Jone Doe
-								<span class="custom-color">Groom</span>
-							</h4>
-							<p>Mauris fermentum lacinia nisl. Duis nec rutrum nisl. Ut ac eros fermentum.</p>
-							<ul class="social-link">
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Facebook">
-										<i class="fa fa-facebook"></i>
-									</a>
-								</li>
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Twitter">
-										<i class="fa fa-twitter"></i>
-									</a>
-								</li>
-								<li class="d-inline-block">
-									<a href="#" target="_blank" title="Linkedin">
-										<i class="fa fa-linkedin"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		About Section End -->
-
-		<!-- Comment Section
-		<section id="comment">
-			<div class="container relative-z">
-				<div class="row">
-					<div class="col-lg-10 offset-lg-1">
-						<div id="comment-carousel" class="owl-carousel owl-theme">
-							<div class="item">
-								<h3 class="heading text-center">Adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</h3>
-							</div>
-							<div class="item">
-								<h3 class="heading text-center">Adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</h3>
-							</div>
-							<div class="item">
-								<h3 class="heading text-center">Adipiscing elit. Sed turpis massa, scelerisque vel diam non, tristique condimentum dui.</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="img-overlay"></div>
-		</section>
-		Comment Section End -->
-
-		<!-- Story Section
-		<section id="story">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 text-center">
-						<div class="big-head-wrap">
-						</div>
-						<h2 class="big-heading mt-0 mt-0">
-							<span class="custom-color">Our</span> Love Story
-						</h2>
-						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
-					</div>
-				</div>
-
-				<div class="timeline">
-					<div class="row">
-						<div class="col-sm-12 col-md-6 pr-70 text-center">
-							<div class="tline-thumbnail story-img-1">
-								<div class="img-date-left">
-									<div class="day">12</div>
-									<div class="month">jan</div>
-								</div>
-							</div>
-						</div>
-						<div class="tline-right-side col-sm-12 col-md-6 pl-70 text-left date-circle margin-b-2">
-							<div class="tline-arrow"></div>
-							<h4 class="tline-title font-weight-light">The first met</h4>
-							<p>Donec a velit molestie, auctor elit a, varius nibh. Nunc hendrerit, leo eu interdum auctor, nibh massa auctor mi, id semper ante nibh egestas ex. Praesent ex dolor.</p>
-							<a class="link" href="blog-single-post.html">Read More</a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 pl-70 text-center order-2 main-order-xs-1 main-order-sm-1">
-							<div class="tline-thumbnail story-img-2">
-								<div class="img-date-right">
-									<div class="day">12</div>
-									<div class="month">jan</div>
-								</div>
-							</div>
-						</div>
-						<div class="tline-left-side pr-70 col-md-6 text-right date-circle order-1 main-order-xs-2 main-order-sm-2 margin-b-2">
-							<div class="tline-arrow"></div>
-							<h4 class="tline-title font-weight-light">First date</h4>
-							<p>Donec a velit molestie, auctor elit a, varius nibh. Nunc hendrerit, leo eu interdum auctor, nibh massa auctor mi, id semper ante nibh egestas ex. Praesent ex dolor.</p>
-							<a class="link" href="blog-single-post.html">Read More</a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12 col-md-6 pr-70 text-center">
-							<div class="tline-thumbnail story-img-3">
-								<div class="img-date-left">
-									<div class="day">12</div>
-									<div class="month">jan</div>
-								</div>
-							</div>
-						</div>
-						<div class="tline-right-side col-md-6 pl-70 text-left date-circle margin-b-2">
-							<div class="tline-arrow"></div>
-							<h4 class="tline-title font-weight-light">The Proposal</h4>
-							<p>Donec a velit molestie, auctor elit a, varius nibh. Nunc hendrerit, leo eu interdum auctor, nibh massa auctor mi, id semper ante nibh egestas ex. Praesent ex dolor.</p>
-							<a class="link" href="blog-single-post.html">Read More</a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12 col-md-6 pl-70 text-center order-2 main-order-xs-1 main-order-sm-1">
-							<div class="tline-thumbnail story-img-4">
-								<div class="img-date-right">
-									<div class="day">12</div>
-									<div class="month">jan</div>
-								</div>
-							</div>
-						</div>
-						<div class="tline-left-side col-md-6 pr-70 text-right date-circle order-1 main-order-xs-2 main-order-sm-2 margin-b-2">
-							<div class="tline-arrow"></div>
-							<h4 class="tline-title font-weight-light">Our wedding</h4>
-							<p>Donec a velit molestie, auctor elit a, varius nibh. Nunc hendrerit, leo eu interdum auctor, nibh massa auctor mi, id semper ante nibh egestas ex. Praesent ex dolor.</p>
-							<a class="link" href="blog-single-post.html">Read More</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		Story Section  End -->
-
-		<!-- Blog Section
-		<section id="blog">
-			<div class="container relative-z">
-				<div class="card-deck">
-					<div class="card">
-						<img class="card-img-top" src="img/blog_1_350x234.jpg" alt="blog">
-						<div class="card-body">
-							<h5 class="font-weight-light card-title">Vestibulum tristique nisi</h5>
-							<p class="card-text">Vestibulum tristique nisi ut odio vestibulum, in efficitur ex egestas.</p>
-							<a href="blog-right-sidebar.html" class="link">Read More</a>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="img/blog_2_350x234.jpg" alt="blog">
-						<div class="card-body">
-							<h5 class="font-weight-light card-title">Vestibulum tristique nisi</h5>
-							<p class="card-text">Vestibulum tristique nisi ut odio vestibulum, in efficitur ex egestas.</p>
-							<a href="blog-right-sidebar.html" class="link">Read More</a>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="img/blog_3_350x234.jpg" alt="blog">
-						<div class="card-body">
-							<h5 class="font-weight-light card-title">Vestibulum tristique nisi</h5>
-							<p class="card-text">Vestibulum tristique nisi ut odio vestibulum, in efficitur ex egestas.</p>
-							<a href="blog-right-sidebar.html" class="link">Read More</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="img-overlay"></div>
-		</section>
-		Blog Section End -->
 
 		<!-- Event Section -->
 		<section id="event">
@@ -479,31 +245,6 @@
 			</div>
 		</section>
 		<!-- People Section End -->
-
-		<!-- Countup Section
-		<section id="countup" >
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-md-3 col-sm-6">
-						<div id="counter-1" class="custom-color counter-number">0</div>
-						<h4 class="font-weight-light">People</h4>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div id="counter-2" class="custom-color counter-number">0</div>
-						<h4 class="font-weight-light">People</h4>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div id="counter-3" class="custom-color counter-number">0</div>
-						<h4 class="font-weight-light">People</h4>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div id="counter-4" class="custom-color counter-number">0</div>
-						<h4 class="font-weight-light">People</h4>
-					</div>
-				</div>
-			</div>
-		</section>
-		Countup Section End -->
 
 		<!-- Portfolio Section -->
 		<section id="portfolio">
