--- a/index.html
+++ b/index.html
@@ -203,42 +203,73 @@
 					<div class="big-head-wrap">
 					</div>
 					<h2 class="big-heading mt-0 mt-0">
-						Important <span class="custom-color">People</span>
+						The <span class="custom-color">Party People</span>
 					</h2>
 					<img class="headline_1" src="img/headline_simple.svg" alt="">
-					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Meet your <i>dashing</i> hosts:</p>
 				</div>
 			</div>
 				<div class="row">
 					<div class="col col-lg-6 text-center">
 						<h4 class="margin-b-2">Bridemaids</h4>
 						<div class="people-img text-center ml-0">
-							<img class="" src="img/people_1.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_jackie.jpg" alt="">
+							<p>Jackie Ceccato</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_2.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_katie1.jpg" alt="">
+							<p>Katie Woerner</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_3.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_amanda.jpg" alt="">
+							<p>Amanda Wilens</p>
 						</div>
-
+						<div class="people-img text-center">
+							<img class="" src="img/people_monica.jpg" alt="">
+							<p>Monica Schnapp</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_amy.jpg" alt="">
+							<p>Amy Morenda</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_sierra.jpg" alt="">
+							<p>Sierra Strautman</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_katie2.jpg" alt="">
+							<p>Katie Strautman</p>
+						</div>
 					</div>
 					<div class="col col-lg-6 text-center">
 						<h4 class="margin-b-2">Groomsmen's</h4>
 						<div class="people-img text-center ml-0">
-							<img class="" src="img/people_4.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_ryan.jpg" alt="">
+							<p>Ryan Strautman</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_5.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_tim.jpg" alt="">
+							<p>Tim Strautman</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_6.jpg" alt="">
-							<p>John Doe</p>
+							<img class="" src="img/people_david.jpg" alt="">
+							<p>David Hill</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_bob.jpg" alt="">
+							<p>Bob Crachy</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_zach.jpg" alt="">
+							<p>Zach McCurry</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_rob.jpg" alt="">
+							<p>Robert Rodriguez</p>
+						</div>
+						<div class="people-img text-center">
+							<img class="" src="img/people_tayler.jpg" alt="">
+							<p>Tayler Bean</p>
 						</div>
 					</div>
 				</div>
@@ -257,7 +288,7 @@
 							<span class="custom-color">Our</span> Portfolio
 						</h2>
 						<img class="headline_1" src="img/headline_simple.svg" alt="">
-						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+						<p class="sub-heading col-lg-8 offset-lg-2 margin-b-2">View our engagement, as well as some recent travel photos here. Come back after the wedding for photos of the event!</p>
 					</div>
 				</div>
 			</div>
@@ -267,16 +298,17 @@
 				<div class="no-margin">
 					<div class="button-group filters-button-group margin-b-4">
 						<button class="button is-checked" data-filter="*">All</button>
-						<button class="button" data-filter=".wedding">Wedding</button>
-						<button class="button" data-filter=".party">Party</button>
-						<button class="button" data-filter=".videos">Videos</button>
+						<button class="button" data-filter=".travel">Travel</button>
+						<button class="button" data-filter=".engagementday">Engagement Day</button>
+						<button class="button" data-filter=".engagement">Engagement Photos</button>
 					</div>
 				</div>
 				<!-- Portfolio Nav End -->
 
 				<!-- Portfolio Images -->
 				<div class="row grid">
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 party transition" data-category="transition">
+					<!-- Travel Photos -->
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 travel transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_1.jpg">
 								<div class="thumbnail-overlay">
@@ -288,7 +320,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 wedding transition" data-category="transition">
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 travel transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_2.jpg">
 								<div class="thumbnail-overlay">
@@ -300,7 +332,8 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 party transition" data-category="transition">
+					<!-- Engagement Photos -->
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagement transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_3.jpg">
 								<div class="thumbnail-overlay">
@@ -312,7 +345,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 wedding transition" data-category="transition">
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagement transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_4.jpg">
 								<div class="thumbnail-overlay">
@@ -324,7 +357,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 wedding transition" data-category="transition">
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagement transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_5.jpg">
 								<div class="thumbnail-overlay">
@@ -336,7 +369,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 party transition" data-category="transition">
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagement transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_6.jpg">
 								<div class="thumbnail-overlay">
@@ -348,7 +381,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 wedding transition" data-category="transition">
+					<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagement transition" data-category="transition">
 						<div class="item">
 							<a href="img/portfolio_7.jpg">
 								<div class="thumbnail-overlay">
@@ -360,18 +393,79 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item col-lg-3 col-md-6 col-sm-12 videos transition" data-category="transition">
-						<div class="item">
-							<a class="popup-youtube" href="https://www.youtube.com/watch?v=v_g-awMAm_4">
-								<div class="thumbnail-overlay">
-									<img class="img-fluid" src="img/portfolio_8.jpg" alt="">
-									<span class="thumbnail-title">
-										<i class="fa fa-youtube-play"></i>
-									</span>
-								</div>
-							</a>
+					<!-- Engagement Day -->
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_1.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_1.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
 						</div>
-					</div><!-- Portfolio Images End -->
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_2.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_2.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_3.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_3.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_4.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_4.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_5.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_5.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+						<div class="grid-item popup-gallery col-lg-3 col-md-6 col-sm-12 engagementday transition" data-category="transition">
+							<div class="item">
+								<a href="img/portfolio_6.jpg">
+									<div class="thumbnail-overlay">
+										<img class="img-fluid" src="img/engagementday_6.jpg" alt="">
+										<span class="thumbnail-title">
+											<i class="fa fa-search-plus"></i>
+										</span>
+									</div>
+								</a>
+							</div>
+						</div><!-- Portfolio Images End -->
 				</div>
 			</div>
 		</section>
@@ -412,7 +506,7 @@
 						<span class="custom-color">R</span>SVP
 					</h2>
 					<img class="headline_1" src="img/headline_simple.svg" alt="">
-					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed turpis massa, scelerisque vel diam non.</p>
+					<p class="sub-heading col-lg-8 offset-lg-2 margin-b-5">Please use this form to RSVP for our Wedding. You also be able to select your food options. Only submit your RSVP once. If you need to change anything please contact us. </p>
 				</div>
 			</div>
 				<div class="row">
