Added photos for all in wedding party. Updated katie1 and katie2 to katiew and katies for better clarity.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 							<p>Jackie Ceccato</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_katie1.jpg" alt="">
+							<img class="" src="img/people_katiew.jpg" alt="">
 							<p>Katie Woerner</p>
 						</div>
 						<div class="people-img text-center">
@@ -237,7 +237,7 @@
 							<p>Sierra Strautman</p>
 						</div>
 						<div class="people-img text-center">
-							<img class="" src="img/people_katie2.jpg" alt="">
+							<img class="" src="img/people_katies.jpg" alt="">
 							<p>Katie Strautman</p>
 						</div>
 					</div>
